--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ typings/
 # dotenv environment variables file
 .env
 
-
+# generated output directory
+dist/
 
 # End of https://www.gitignore.io/api/node,code
