--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
+  },
+  "dependencies": {
+    "@types/jquery": "^3.3.1",
+    "jquery": "^3.3.1"
   }
 }
